# symbiflow-arch-defs

./: .gitignore  CMakeLists.txt  meson.build
ice40/devices/top-routing-virt/tiles/pio/: pio.pb_types.xml
ice40/utils/: ice40_import_timing_from_icebox.py
machxo2/: CMakeLists.txt  facade.cmake
tests/make/: test-common.mk
tests/make/arch/: ice40.mk
utils/: sdf.py
utils/lib/rr_graph/: graph.py
utils/vlog/: vlog_to_model.py  vlog_to_pbtype.py
utils/vlog/yosys/: run.py
vpr/muxes/logic/mux3/: mux3.sim.v
xc20xx/primitives/clb/: xc20xx_clb.sim.v  xc2_clb.sim.v
xc20xx/primitives/comb/: xc20xx_clbcl.sim.v
xc20xx/primitives/dff/: xc20xx_dffsr.sim.v  xc20xx_dlatch.sim.v
xc20xx/primitives/lut/: xc20xx_lut.sim.v  xc20xx_lut3.sim.v  xc20xx_lut4.sim.v
xc20xx/primitives/routing/clkinmux/: Makefile.mux
xc20xx/primitives/routing/clkpolmux/: Makefile.mux
xc20xx/primitives/routing/f0mux/: Makefile.mux
xc20xx/primitives/routing/f1mux/: Makefile.mux
xc20xx/primitives/routing/f2mux/: Makefile.mux
xc20xx/primitives/routing/fgselmux/: Makefile.mux
xc20xx/primitives/routing/g0mux/: Makefile.mux
xc20xx/primitives/routing/g1mux/: Makefile.mux
xc20xx/primitives/routing/g2mux/: Makefile.mux
xc20xx/primitives/routing/rmux/: Makefile.mux
xc20xx/primitives/routing/semux/: Makefile.mux
xc20xx/primitives/routing/smux/: Makefile.mux
xc20xx/primitives/routing/xmux/: Makefile.mux
xc20xx/primitives/routing/ymux/: Makefile.mux
xc20xx/primitives/sync/: xc20xx_clbse.sim.v
